--- a/404.html
+++ b/404.html
@@ -3,10 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Page Not Found - Gbemisola Oyeniyi</title>
 <meta name="description" content="The page you're looking for doesn't exist. Return to Gbemisola Oyeniyi's homepage.">
 <meta name="author" content="Gbemisola Oyeniyi">
-<meta name="theme-color" content="#ffffff">
-<meta name="robots" content="noindex, follow">
+<meta name="theme-color" content="#ff7707">
+<meta name="robots" content="noindex, nofollow">
+
+<link rel="canonical" href="https://gbemisolaoyeniyi.com/404.html">
+
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -14,9 +18,22 @@
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#6a40a6">
-<link rel="canonical" href="https://gbemisolaoyeniyi.com">
-<title>Gbemisola Oyeniyi - Page Not Found</title>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://gbemisolaoyeniyi.com/404.html">
+<meta property="og:title" content="Page Not Found | Gbemisola Oyeniyi">
+<meta property="og:description" content="The page you're looking for doesn't exist. Return to Gbemisola Oyeniyi's homepage.">
+<meta property="og:image" content="https://gbemisolaoyeniyi.com/assets/images/og-image.jpg">
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="@oliveajike">
+<meta name="twitter:title" content="Page Not Found | Gbemisola Oyeniyi">
+<meta name="twitter:description" content="The page you're looking for doesn't exist. Return to Gbemisola Oyeniyi's homepage.">
+<meta name="twitter:image" content="https://gbemisolaoyeniyi.com/assets/images/og-image.jpg">
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&family=Lexend:wght@400;500;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+
+<link rel="preload" href="/assets/images/gbemisola-oyeniyi.svg" as="image" type="image/svg+xml">
 <style>
 :root {
 --color-primary: #333;
@@ -59,6 +76,16 @@ rgba(255, 240, 210, 0.9) 70%,
 rgba(255, 224, 200, 1) 85%,
 rgba(255, 208, 188, 1) 100%
 );
+--gradient-dark: linear-gradient(
+to bottom right,
+rgba(137, 137, 29, 1) 0%,
+rgba(102, 133, 40, 0.9) 40%,
+rgba(185, 139, 46, 0.9) 70%,
+rgba(171, 88, 25, 1) 85%,
+rgba(187, 57, 29, 1) 100%
+);
+--current-font: 'Noto Sans', sans-serif;
+--current-leading: var(--leading-relaxed);
 }
 
 html {
@@ -92,7 +119,7 @@ font-weight: 700;
 
 p {
 font-size: var(--text-base);
-line-height: var(--leading-relaxed);
+line-height: var(--current-leading);
 max-width: 65ch;
 }
 
@@ -131,12 +158,24 @@ flex-direction: column;
 min-height: 100vh;
 background-color: var(--color-white);
 color: var(--color-primary);
-font-family: 'Noto Sans', sans-serif;
+font-family: var(--current-font);
 line-height: 1.6;
 transition: var(--transition);
 max-width: 1440px;
 width: 100%;
 margin: 0 auto;
+}
+
+body.dark-mode {
+background-color: #222;
+color: #f0f0f0;
+--color-primary: #f0f0f0;
+--color-secondary: #ccc;
+--color-light: #333;
+--color-lighter: #444;
+--color-white: #222;
+--color-gray: #555;
+--color-dark-gray: #666;
 }
 
 .skip-link {
@@ -153,14 +192,116 @@ z-index: 1000;
 left: 0;
 }
 
+.accessibility-btn {
+position: fixed;
+top: 20px;
+left: 20px;
+z-index: 999;
+background: #ff7707;
+color: white;
+width: 50px;
+height: 50px;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+transition: all 0.3s ease;
+border: none;
+}
+
+.accessibility-btn:hover {
+transform: scale(1.1);
+}
+
+.accessibility-btn svg {
+width: 24px;
+height: 24px;
+}
+
+.modal-header {
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin-bottom: 1rem;
+}
+
+.close-modal {
+background: none;
+border: none;
+cursor: pointer;
+font-size: 1.5rem;
+color: var(--color-secondary);
+}
+
+.toggle-switch {
+position: relative;
+display: inline-block;
+width: 60px;
+height: 34px;
+margin-left: 1rem;
+}
+
+.toggle-switch input {
+opacity: 0;
+width: 0;
+height: 0;
+}
+
+.toggle-slider {
+position: absolute;
+cursor: pointer;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: var(--color-gray);
+transition: .4s;
+border-radius: 34px;
+}
+
+.toggle-slider:before {
+position: absolute;
+content: "";
+height: 26px;
+width: 26px;
+left: 4px;
+bottom: 4px;
+background-color: white;
+transition: .4s;
+border-radius: 50%;
+}
+
+input:checked + .toggle-slider {
+background-color: #ff7707;
+}
+
+input:checked + .toggle-slider:before {
+transform: translateX(26px);
+}
+
+.toggle-container {
+display: flex;
+align-items: center;
+justify-content: space-between;
+width: 100%;
+margin-bottom: 1.5rem;
+}
+
 main {
 flex: 1;
 }
 
 header {
+position: relative;
 padding: 1rem;
 text-align: center;
 background: var(--gradient);
+}
+
+body.dark-mode header {
+background: var(--gradient-dark);
 }
 
 .logo {
@@ -189,6 +330,10 @@ width: 100%;
 text-align: center;
 }
 
+body.dark-mode .hero {
+background: #222;
+}
+
 .pre-heading {
 font-size: 0.9rem;
 letter-spacing: 0.2em;
@@ -197,7 +342,7 @@ color: var(--color-secondary);
 }
 
 .hero h1 {
-margin-bottom: 0.25rem;
+margin-bottom: 1.5rem;
 }
 
 .hero p {
@@ -206,11 +351,12 @@ margin-bottom: 2rem;
 }
 
 .btn {
-padding: 0.75rem 1.5rem;
-background: white;
-color: black;
-box-shadow: var(--shadow-md);
+padding: 0.5rem 1rem;
+background: var(--color-white);
+color: var(--color-primary);
+box-shadow: var(--shadow-sm);
 border: 2px solid #ff7707;
+border-radius: var(--radius-sm);
 cursor: pointer;
 transition: var(--transition);
 text-decoration: none;
@@ -238,12 +384,129 @@ margin-bottom: 3rem;
 color: var(--color-secondary);
 }
 
+.modal {
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background: rgba(0,0,0,0.5);
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 100;
+display: none;
+overflow-y: auto;
+}
+
+body.modal-open {
+overflow: hidden;
+}
+
+.modal-content {
+background: var(--color-white);
+padding: 2rem 1.5rem;
+border-radius: var(--radius-md);
+max-width: 500px;
+width: 100%;
+box-shadow: var(--shadow-md);
+max-height: 90vh;
+overflow-y: auto;
+}
+
+.modal-content::-webkit-scrollbar {
+width: 8px;
+}
+
+.modal-content::-webkit-scrollbar-track {
+background: var(--color-lighter);
+border-radius: 10px;
+}
+
+.modal-content::-webkit-scrollbar-thumb {
+background-color: var(--color-gray);
+border-radius: 10px;
+}
+
+.modal-content::-webkit-scrollbar-thumb:hover {
+background-color: var(--color-secondary);
+}
+
+.modal-buttons {
+display: flex;
+justify-content: flex-end;
+gap: 1rem;
+margin-top: 1rem;
+}
+
+.modal-buttons button {
+padding: 0.5rem 1rem;
+border: none;
+border-radius: var(--radius-sm);
+cursor: pointer;
+transition: var(--transition);
+}
+
+.confirm-btn {
+background: var(--color-primary);
+color: var(--color-white);
+}
+
+.confirm-btn:hover {
+opacity: 0.9;
+}
+
+.cancel-btn {
+background: var(--color-light);
+}
+
+.cancel-btn:hover {
+background: var(--color-dark-gray);
+}
+
+.modal-options {
+display: flex;
+flex-direction: column;
+gap: 1.5rem;
+margin: 1rem 0;
+}
+
+.modal-option {
+background: var(--color-lighter);
+padding: 1rem;
+border-radius: var(--radius-md);
+transition: var(--transition);
+}
+
+.modal-option:hover {
+transform: translateY(-2px);
+box-shadow: var(--shadow-sm);
+}
+
+.modal-option h3 {
+margin-bottom: 0.5rem;
+}
+
+.modal-option p {
+color: var(--color-secondary);
+}
+
+.modal-description {
+margin-bottom: 1.5rem;
+color: var(--color-secondary);
+font-size: var(--text-sm);
+}
+
 footer {
 width: 100%;
 background: var(--gradient);
 padding: 3rem 2rem;
 text-align: center;
 margin-top: auto;
+}
+
+body.dark-mode footer {
+background: var(--gradient-dark);
 }
 
 .footer-nav {
@@ -301,10 +564,90 @@ transition: var(--transition);
 .copyright a:hover {
 border-bottom-color: transparent;
 }
+
+@media (max-width: 767px) {
+.modal {
+align-items: flex-end;
+}
+.modal-content {
+width: 100%;
+max-height: 80vh;
+}
+}
+
+/* New accessibility option styles */
+.option-group {
+margin-bottom: 1.5rem;
+}
+.option-header {
+display: flex;
+justify-content: space-between;
+align-items: center;
+cursor: pointer;
+padding: 0.5rem 0;
+border-bottom: 1px solid var(--color-gray);
+margin-bottom: 0.5rem;
+}
+.option-header h3 {
+margin: 0;
+}
+.option-header svg {
+transition: transform 0.3s ease;
+}
+.option-header.active svg {
+transform: rotate(180deg);
+}
+.option-buttons {
+display: none;
+flex-wrap: wrap;
+gap: 0.5rem;
+padding: 0.5rem 0;
+}
+.option-buttons.active {
+display: flex;
+}
+.option-btn {
+padding: 0.5rem 1rem;
+background: var(--color-white);
+color: var(--color-primary);
+box-shadow: var(--shadow-sm);
+border: 1px solid var(--color-gray);
+border-radius: var(--radius-sm);
+cursor: pointer;
+transition: var(--transition);
+}
+.option-btn:hover {
+background: var(--color-lighter);
+}
+.option-btn.active {
+background: #ff7707;
+color: white;
+border-color: var(--color-white);
+box-shadow: var(--shadow-sm);
+}
+.font-btn-noto {
+font-family: 'Noto Sans', sans-serif;
+}
+.font-btn-montserrat {
+font-family: 'Montserrat', sans-serif;
+}
+.font-btn-lexend {
+font-family: 'Lexend', sans-serif;
+}
+.font-btn-segoe {
+font-family: 'Segoe UI', sans-serif;
+}
 </style>
 </head>
 <body>
 <a href="#main-content" class="skip-link">Skip to main content</a>
+
+<button class="accessibility-btn" aria-label="Accessibility Options">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+<path d="M12 2a2 2 0 110 4 2 2 0 010-4zm8 5H4a1 1 0 000 2h7v3.5l-3.1 7.35a1 1 0 001.8.8L12 14.62l2.3 6.03a1 1 0 001.8-.8L13 12.5V9h7a1 1 0 000-2z"/>
+</svg>
+</button>
+
 <header>
 <a href="/"><img src="/assets/images/gbemisola-oyeniyi.svg" alt="Gbemisola Oyeniyi Logo" class="logo"></a>
 </header>
@@ -313,15 +656,14 @@ border-bottom-color: transparent;
 <section class="hero">
 <p class="pre-heading">😕 PAGE NOT FOUND</p>
 <h1>Well, this is awkward</h1>
-<p>The page you’re looking for isn’t here. It might have been moved, renamed, or never existed in the first place.</p>
+<p>The page you're looking for isn't here. It might have been moved, renamed, or never existed in the first place.</p>
 <a href="/" class="btn">Return Home</a>
 </section>
-
 </main>
 
 <footer>
 <div class="footer-nav">
-<a href="/index.html#">Projects</a>
+<a href="/index.html#projects">Projects</a>
 </div>
 <div class="social-icons">
 <a href="https://github.com/itsgbemi" aria-label="GitHub">
@@ -355,5 +697,260 @@ border-bottom-color: transparent;
 </div>
 </footer>
 
+<div class="modal" id="accessibilityModal">
+<div class="modal-content">
+<div class="modal-header">
+<h2>Accessibility Options</h2>
+<button class="close-modal" aria-label="Close modal">&times;</button>
+</div>
+<p class="modal-description">Customize your viewing experience with these accessibility settings. Changes will be applied immediately.</p>
+<div class="modal-options">
+<div class="option-group">
+<div class="option-header" onclick="toggleOption('mode-options')">
+<h3>Switch Mode</h3>
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+<polyline points="6 9 12 15 18 9"></polyline>
+</svg>
+</div>
+<div class="option-buttons" id="mode-options">
+<button class="option-btn" onclick="setTheme('light')">Light</button>
+<button class="option-btn" onclick="setTheme('dark')">Dark</button>
+</div>
+</div>
+
+<div class="option-group">
+<div class="option-header" onclick="toggleOption('font-options')">
+<h3>Change Font</h3>
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+<polyline points="6 9 12 15 18 9"></polyline>
+</svg>
+</div>
+<div class="option-buttons" id="font-options">
+<button class="option-btn font-btn-noto" onclick="setFont('Noto Sans')">Noto Sans</button>
+<button class="option-btn font-btn-montserrat" onclick="setFont('Montserrat')">Montserrat</button>
+<button class="option-btn font-btn-lexend" onclick="setFont('Lexend')">Lexend</button>
+<button class="option-btn font-btn-segoe" onclick="setFont('Segoe UI')">Segoe UI</button>
+</div>
+</div>
+
+<div class="option-group">
+<div class="option-header" onclick="toggleOption('line-height-options')">
+<h3>Line Height</h3>
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+<polyline points="6 9 12 15 18 9"></polyline>
+</svg>
+</div>
+<div class="option-buttons" id="line-height-options">
+<button class="option-btn" onclick="setLineHeight('var(--leading-none)')">None</button>
+<button class="option-btn" onclick="setLineHeight('var(--leading-tight)')">Tight</button>
+<button class="option-btn" onclick="setLineHeight('var(--leading-snug)')">Snug</button>
+<button class="option-btn" onclick="setLineHeight('var(--leading-normal)')">Normal</button>
+<button class="option-btn" onclick="setLineHeight('var(--leading-relaxed)')">Relaxed</button>
+<button class="option-btn" onclick="setLineHeight('var(--leading-loose)')">Loose</button>
+</div>
+</div>
+
+<div class="option-group">
+<div class="toggle-container">
+<h3>Read Aloud</h3>
+<label class="toggle-switch">
+<input type="checkbox" id="readAloudToggle">
+<span class="toggle-slider"></span>
+</label>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<script>
+// Accessibility Modal Functionality
+const accessibilityBtn = document.querySelector('.accessibility-btn');
+const accessibilityModal = document.getElementById('accessibilityModal');
+const closeModal = document.querySelector('.close-modal');
+const readAloudToggle = document.getElementById('readAloudToggle');
+
+// Toggle modal
+accessibilityBtn.addEventListener('click', () => {
+accessibilityModal.style.display = 'flex';
+document.body.classList.add('modal-open');
+});
+
+closeModal.addEventListener('click', () => {
+accessibilityModal.style.display = 'none';
+document.body.classList.remove('modal-open');
+});
+
+// Close modal when clicking outside
+window.addEventListener('click', (e) => {
+if (e.target === accessibilityModal) {
+accessibilityModal.style.display = 'none';
+document.body.classList.remove('modal-open');
+}
+});
+
+// Toggle option sections
+function toggleOption(id) {
+const optionButtons = document.getElementById(id);
+const optionHeader = optionButtons.previousElementSibling;
+optionButtons.classList.toggle('active');
+optionHeader.classList.toggle('active');
+}
+
+// Save settings to localStorage
+function saveSettings(key, value) {
+localStorage.setItem(key, value);
+}
+
+// Get settings from localStorage
+function getSetting(key) {
+return localStorage.getItem(key);
+}
+
+// Theme switcher
+function setTheme(theme) {
+if (theme === 'dark') {
+document.body.classList.add('dark-mode');
+} else {
+document.body.classList.remove('dark-mode');
+}
+saveSettings('theme', theme);
+// Update active button state
+const modeButtons = document.querySelectorAll('#mode-options .option-btn');
+modeButtons.forEach(btn => {
+btn.classList.remove('active');
+if ((theme === 'light' && btn.textContent === 'Light') || 
+(theme === 'dark' && btn.textContent === 'Dark')) {
+btn.classList.add('active');
+}
+});
+}
+
+// Font switcher
+function setFont(font) {
+let fontValue;
+switch(font) {
+case 'Noto Sans':
+fontValue = "'Noto Sans', sans-serif";
+break;
+case 'Montserrat':
+fontValue = "'Montserrat', sans-serif";
+break;
+case 'Lexend':
+fontValue = "'Lexend', sans-serif";
+break;
+case 'Segoe UI':
+fontValue = "'Segoe UI', sans-serif";
+break;
+}
+document.documentElement.style.setProperty('--current-font', fontValue);
+document.body.style.fontFamily = fontValue;
+saveSettings('font', font);
+// Update active button state
+const fontButtons = document.querySelectorAll('#font-options .option-btn');
+fontButtons.forEach(btn => {
+btn.classList.remove('active');
+if (btn.textContent === font) {
+btn.classList.add('active');
+}
+});
+}
+
+// Line height switcher
+function setLineHeight(height) {
+document.documentElement.style.setProperty('--current-leading', height);
+saveSettings('lineHeight', height);
+// Update active button state
+const lineHeightButtons = document.querySelectorAll('#line-height-options .option-btn');
+lineHeightButtons.forEach(btn => {
+btn.classList.remove('active');
+const heightMap = {
+'None': 'var(--leading-none)',
+'Tight': 'var(--leading-tight)',
+'Snug': 'var(--leading-snug)',
+'Normal': 'var(--leading-normal)',
+'Relaxed': 'var(--leading-relaxed)',
+'Loose': 'var(--leading-loose)'
+};
+if (heightMap[btn.textContent] === height) {
+btn.classList.add('active');
+}
+});
+}
+
+// Read aloud functionality
+let speechSynthesis = window.speechSynthesis;
+let utterance = null;
+
+readAloudToggle.addEventListener('change', (e) => {
+if (e.target.checked) {
+startReadAloud();
+} else {
+stopReadAloud();
+}
+saveSettings('readAloud', e.target.checked);
+});
+
+function startReadAloud() {
+stopReadAloud();
+const mainContent = document.querySelector('main');
+const text = mainContent.textContent || mainContent.innerText;
+utterance = new SpeechSynthesisUtterance(text);
+utterance.rate = 1;
+utterance.pitch = 1;
+utterance.volume = 1;
+speechSynthesis.speak(utterance);
+}
+
+function stopReadAloud() {
+if (speechSynthesis.speaking) {
+speechSynthesis.cancel();
+}
+}
+
+// Load saved settings on page load
+function loadSettings() {
+// Theme
+const savedTheme = getSetting('theme');
+if (savedTheme) {
+setTheme(savedTheme);
+} else {
+// Check for prefers-color-scheme if no saved theme
+if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+setTheme('dark');
+} else {
+setTheme('light');
+}
+}
+
+// Font
+const savedFont = getSetting('font');
+if (savedFont) {
+setFont(savedFont);
+} else {
+setFont('Noto Sans');
+}
+
+// Line height
+const savedLineHeight = getSetting('lineHeight');
+if (savedLineHeight) {
+setLineHeight(savedLineHeight);
+} else {
+setLineHeight('var(--leading-relaxed)');
+}
+
+// Read aloud
+const savedReadAloud = getSetting('readAloud');
+if (savedReadAloud === 'true') {
+readAloudToggle.checked = true;
+startReadAloud();
+}
+}
+
+// Initialize settings when page loads
+document.addEventListener('DOMContentLoaded', () => {
+loadSettings();
+});
+</script>
 </body>
 </html>
