--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ max-height: 80vh;
 <section class="hero">
 <p class="pre-heading">✨ HELLO WORLD</p>
 <h1>A Little About Me</h1>
-<p>I love solving hard problems the lazy-smart way: creatively, efficiently, and ideally from a comfy seat. My taste gravitates toward only the best in books, music, and TV. Lately, I've been diving deep into the possibilities of AI to drive open-source projects and build digital businesses.</p>
+<p>I love solving hard problems the lazy-smart way: creatively, efficiently, and ideally while reclining. My taste gravitates toward only the best in books, music, and TV. Lately, I've been diving deep into the possibilities of AI to drive open-source projects and build digital businesses.</p>
 <div class="hero-video">
 <video width="100%" height="auto" autoplay loop muted playsinline poster="/assets/images/scrapbook.png">
 <source src="/assets/video/scrapbook.mp4" type="video/mp4">
