--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ View
 </svg>
 </div>
 </a>
-<a href="https://github.com/outparse/english-dictionary-dataset" class="feature-card" target="_blank" rel="noopener noreferrer">
+<a href="https://github.com/openinfong" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers" viewBox="0 0 24 24">
 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
@@ -736,8 +736,8 @@ View
 <polyline points="2 12 12 17 22 12"></polyline>
 </svg>
 </div>
-<h3>Open Linguistic Database</h3>
-<p>All the rules and word data Outparse uses are open, free to view, and constantly evolving.</p>
+<h3>Open Info NG</h3>
+<p>Premier open-source database for Nigeria’s most up-to-date and vital public data.</p>
 <div class="view-btn">
 View
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
